--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
      <input id="newTodoInput" />
     <button id="addTodoBtn">Add todo</button>
     <!-- your javascript must add todos inside the following tag as <li> tags! -->
-    <ol id="todoList"></ol>
+    <ol id="todoList">
+		<li>BMW</li>
+		<li>Audi</li>
+		<li>Mercedes</li>
+	</ol>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
